survey-salesforce/salesforce-app/src/objects/Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Global settings for Mobile Surveys application</description>
    <fields>
        <fullName>MajorVersion__c</fullName>
        <label>Major Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinorVersion__c</fullName>
        <label>Minor Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PatchVersion__c</fullName>
        <label>Patch Version</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Settings</label>
</CustomObject>